Fix username center; Fix image alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,11 +99,11 @@ label {
 .roomUser img {
 	border-radius: 50%;
 	border: 2px black dashed;
-	max-height: 70px;
-	max-width: 70px;
+	max-height: 100px;
+	max-width: 100px;
 }
 
 .roomUser h4 {
-	text-align: justify;
+	text-align: center;
 	color: #FFFFFF;
 }
